// Copyright 2020 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message AwsSshInstanceSyncPerpetualTaskParamsNg {
  string account_id = 1;
  string service_type = 2;
  string infrastructure_key = 3;
  repeated string hosts = 4;
  bytes infra_delegate_config = 5;
  string host_connection_type = 6;
}